# Automatic-virtual-meassurement-systems

./: LICENSE  README.md  startRPI.sh  startServer.sh
Raspberry-pi/: .env  docker-compose.yml
Raspberry-pi/api/: Dockerfile  pyproject.toml  rpi_api.py  rpi_dal.py  test_requests.txt
Raspberry-pi/bash_startup_script/: start-rpi-api.sh
Raspberry-pi/nginx/: nginx.conf
Server/: .env  docker-compose.yml
Server/backend/: Dockerfile  go.mod  main.go
Server/bash_startup_script/: start-server.sh
Server/frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
Server/frontend/components/: Dashboard.tsx
Server/frontend/pages/dashboard/: index.tsx
Server/frontend/styles/: Dashboard.module.css
Server/nginx/: Dockerfile  nginx.conf
Server/server/: test_requests.txt
Server/server/src/: server.go
Server/webserver/: Dockerfile
Server/webserver/cmd/: main.go  webserver.go
Server/webserver/db_init/: db_init.go
Server/webserver/pkg/config/: config.go
Server/webserver/pkg/db/: db.go
Server/webserver/pkg/methods/: controler.go
Server/webserver/pkg/models/: db_model.go
raspberry-pi/: .env  docker-compose.yml
raspberry-pi/api/: Dockerfile  pyproject.toml  rpi_api.py
server/frontend/: Dockerfile  next.config.js  package.json
server/frontend/pages/dashboard/: index.tsx
server/frontend/styles/: Dashboard.module.css
server/nginx/api_errors/: api_json_errors.conf
server/server/: Dockerfile
